--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -6,6 +6,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js" integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Goldman&display=swap');
+    </style>
 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -31,9 +34,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CryptoQuiz</title>
   </head>
-  <body style="background-color: #3B4A6F; color: yellow;">
+  <body style=" background: linear-gradient(to top,rgba(0,0,0,0.6), rgba(0,0,0,0.8)), url('https://s1.1zoom.me/b5852/950/Coins_Bitcoin_dash_ripple_litecoin_monero_ethereum_554249_2560x1440.jpg'); background-position: 'center'; background-attachment: fixed; background-repeat: no-repeat; background-size: cover; color: yellow;">
+    <!-- background-color: #3B4A6F; -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
