Added receive() function in contract

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -36,8 +36,9 @@
     -->
     <title>CryptoQuiz</title>
   </head>
-  <body style=" background: linear-gradient(to top,rgba(0,0,0,0.6), rgba(0,0,0,0.8)), url('https://s1.1zoom.me/b5852/950/Coins_Bitcoin_dash_ripple_litecoin_monero_ethereum_554249_2560x1440.jpg'); background-position: 'center'; background-attachment: fixed; background-repeat: no-repeat; background-size: cover; color: yellow;">
+  <body style=" background: linear-gradient(to top,rgba(0,0,0,0.6), rgba(0,0,0,0.8)), url('bgImage.jpg'); background-position: 'center'; background-attachment: fixed; background-repeat: no-repeat; background-size: cover; color: yellow;">
     <!-- background-color: #3B4A6F; -->
+    <!-- https://s1.1zoom.me/b5852/950/Coins_Bitcoin_dash_ripple_litecoin_monero_ethereum_554249_2560x1440.jpg -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
